--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -135,14 +135,14 @@ CAL_emergency_reserve:0 "비상동원령 선포"
 CSA_emergency_reserve:0 "비상동원령 선포"
 TEX_emergency_reserve:0 "비상동원령 선포"
 ACW_arms_dealers:0 "아메리칸 암즈 설립"
-CAL_inspire_resistance:0 "Inspire Resistance in [From.GetNameDef]"
-CAL_inspire_resistance_desc:0 "Resistance sympathizers in [From.GetNameDef] recognize that our efforts in the civil war are not going well. They're willing to help us, with some arms and assistance in co-ordination."
-TEX_inspire_longists:0 "Inspire Longists in [From.GetNameDef]"
-TEX_inspire_longists_desc:0 "Huey Long sympathizers in [From.GetNameDef] recognize that our efforts in the civil war are not going well. They're willing to help us, with some arms and assistance in co-ordination."
-CSA_inspire_syndicalists:0 "Inspire Syndicalists in [From.GetNameDef]"
-CSA_inspire_syndicalists_desc:0 "Syndicalist sympathizers in [From.GetNameDef] recognize that our efforts in the civil war are not going well. They're willing to help us, with some arms and assistance in co-ordination."
-USA_inspire_loyalists:0 "Inspire Loyalists in [From.GetNameDef]"
-USA_inspire_loyalists_desc:0 "Loyalist sympathizers in [From.GetNameDef] recognize that our efforts in the civil war are not going well. They're willing to help us, with some arms and assistance in co-ordination."
+CAL_inspire_resistance:0 "[From.GetNameDef]의 저항군 고무하기"
+CAL_inspire_resistance_desc:0 "[From.GetNameDef]의 저항군 지지자들은 내전에 대한 우리의 노력이 잘 진행되고 있지 않다는 것을 인식하고 있습니다. 그들은 기꺼이 우리를 도울 것입니다. 약간의 무기와 협력으로요."
+TEX_inspire_longists:0 "[From.GetNameDef]의 롱 지지자 고무하기"
+TEX_inspire_longists_desc:0 "[From.GetNameDef]의 휴이 롱 지지자들은 내전에 대한 우리의 노력이 잘 진행되고 있지 않다는 것을 인식하고 있습니다. 그들은 기꺼이 우리를 도울 것입니다. 약간의 무기와 협력으로요."
+CSA_inspire_syndicalists:0 "[From.GetNameDef]의 생디칼리스트 고무하기"
+CSA_inspire_syndicalists_desc:0 "[From.GetNameDef]의 생디칼리스트 지지자들은 내전에 대한 우리의 노력이 잘 진행되고 있지 않다는 것을 인식하고 있습니다. 그들은 기꺼이 우리를 도울 것입니다. 약간의 무기와 협력으로요."
+USA_inspire_loyalists:0 "[From.GetNameDef]의 충성주의자 고무하기"
+USA_inspire_loyalists_desc:0 "[From.GetNameDef]의 충성주의자들은 내전에 대한 우리의 노력이 잘 진행되고 있지 않다는 것을 인식하고 있습니다. 그들은 기꺼이 우리를 도울 것입니다. 약간의 무기와 협력으로요."
 ACW_federal_front:0 "연방 전선 압박"
 ACW_syndicalist_front:0 "생디칼리스트 전선 압박"
 ACW_longist_front:0 "롱 지지자 전선 압박"
@@ -210,7 +210,7 @@ amcivwar.2.a:0 "공화국을 지켜내자"
 amcivwar.2.b:0 "조국을 지켜내자 (미주 연합으로 플레이합니다)"
 
 amcivwar.3.t:0 "태평양의 주지사들이 비상사태를 선포하다"
-amcivwar.3.d:0 "태평양 연안의 주지사들은 맥아더, 휴이 롱, 그리고 잭 리드 모두 미국의 반역자이자 폭군이며 적이라고 선언했습니다. They currently have not seceded from the Union, but instead refuse to recognize the authority of any of the competing governments. Governor Frank Merriam announced at the Sacramento legislature that, if push came to shove, they would see 'proper democracy' restored to the country by force."
+amcivwar.3.d:0 "태평양 연안의 주지사들은 맥아더, 휴이 롱, 그리고 잭 리드 모두 미국의 반역자이자 폭군이며 적이라고 선언했습니다. 그들은 현재 연방에서 탈퇴하지 않았지만, 대신 경쟁하는 정부의 어떤 권한도 인정하지 않고 있습니다. 프랭크 메리엄 주지사는 새크라멘토 입법부에서 만약 압박이 가해지면, 그들은 강제로 '참된 민주주의'가 회복하게 되는 것을 보게 될 것이라고 발표했습니다."
 amcivwar.3.a:0 "정부를 지켜내자"
 amcivwar.3.b:0 "공화국을 지켜내자 (태평양 합중국으로 플레이합니다)"
 
@@ -234,7 +234,7 @@ amcivwar.7.a:0 "재앙이 시작되었다. 공화국을 지켜내자"
 amcivwar.7.b:0 "혁명이 시작되었다. 노동자들을 지켜내자 (노동 연맹으로 플레이합니다)"
 
 amcivwar.8.t:0 "태평양 주지사들이 비상사태를 선포하다"
-amcivwar.8.d:0 "태평양 연안의 주지사들은 맥아더, 휴이 롱, 그리고 잭 리드 모두 미국의 반역자이자 폭군이며 적이라고 선언했습니다. They currently have not seceded from the Union, but instead refuse to recognize the authority of any of the competing governments. Governor Frank Merriam announced at the Sacramento legislature that, if push came to shove, they would see 'proper democracy' restored to the country by force."
+amcivwar.8.d:0 "태평양 연안의 주지사들은 맥아더, 휴이 롱, 그리고 잭 리드 모두 미국의 반역자이자 폭군이며 적이라고 선언했습니다. 그들은 현재 연방에서 탈퇴하지 않았지만, 대신 경쟁하는 정부의 어떤 권한도 인정하지 않고 있습니다. 프랭크 메리엄 주지사는 새크라멘토 입법부에서 만약 압박이 가해지면, 그들은 강제로 '참된 민주주의'가 회복하게 되는 것을 보게 될 것이라고 발표했습니다."
 amcivwar.8.a:0 "정부를 지켜내자"
 amcivwar.8.b:0 "공화국을 지켜내자 (태평양 합중국으로 플레이합니다)"
 
@@ -283,17 +283,17 @@ amcivwar.16.a:0 "알겠다."
 
 ### Set Up Events - Landon ###
 amcivwar.17.t:0 "휴이 롱이 정부를 규탄하다"
-amcivwar.17.d:0 "Huey Long has declared that President Landon is a tyrant and must be opposed. In a radio speech, he denounced the president for being in league with the syndicalists of the SPA, and accused him of doing nothing to stop the chaos. Long has vowed to restore order and destroy the corrupt government in Washington, and a number of southern govenors immediately declared their support for him and demanded that Alf Landon immediately step down and turn over control to Long and a 'reconciliation committee' that would see a restructuring of the American government."
+amcivwar.17.d:0 "휴이 롱은 랜던 대통령이 폭군이며 반대해야 한다고 선언했습니다. 롱은 라디오 연설에서 대통령이 사회당의 생디칼리스트들과 한패라고 맹비난했고, 혼란을 막기 위해 아무것도 하지 않았다고 비난했습니다. 롱은 워싱턴에서 질서를 회복하고 부패한 정부를 파괴할 것을 맹세했고, 다수의 남부 주지사들은 즉시 롱을 지지한다고 선언하며 알프 랜던에게 즉각 사퇴하여 롱에게 지배권을 이양할 것을 요구했습니다. 그리고 미국 정부의 구조조정을 하게 될 '재조정 위원회'를 요구했습니다."
 amcivwar.17.a:0 "공화국을 지켜내자"
 amcivwar.17.b:0 "조국을 지켜내자 (미주 연합으로 플레이합니다)"
 
 amcivwar.18.t:0 "잭 리드가 행동을 촉구하다"
-amcivwar.18.d:0 "The crackdown on the Socialist Party could have only had one outcome: to protect the rights of workers across the nation, Jack Reed has called upon the workers of America to stand up against their capitalist overlords, saying that decent Americans have a moral obligation to take action against President Landon and the corruption he represents. A number of northern governors immediately declared their support for Reed, backed up by syndicalist militias who have spread throughout the states to block roads and take over army bases."
+amcivwar.18.d:0 "사회당에 대한 탄압은 단 한 가지 결과만 낳았습니다: 전국적으로 노동자들의 권리를 보호하기 위해, 잭 리드는 점잖은 미국인들은 랜던 대통령과 그가 대표하는 부패에 대한 도덕적 의무를 지고 있다며, 미국 노동자들에게 그들의 자본주의적 권력자에 대항할 것을 촉구했습니다. 북부 여러 주지사들은 즉시 리드를 지지한다고 선언했는데, 리드는 미국 전역에 걸쳐 도로를 봉쇄하고 군 기지를 점령하기 위해 확산된 생디칼리스트 민병대의 지원을 받고 있습니다."
 amcivwar.18.a:0 "재앙이 시작되었다. 공화국을 지켜내자"
 amcivwar.18.b:0 "혁명이 시작되었다. 노동자들을 지켜내자 (노동 연맹으로 플레이합니다)"
 
 amcivwar.19.t:0 "벼랑 끝의 미국"
-amcivwar.19.d:0 "President Alf Landon experienced a major blow today as a large number of governors declared his government illegitimate, throwing their support behind either southern populist Huey Long or the syndicalist leader Jack Reed. They have stopped short of seceding from the Union, but have declared that the federal government holds no authority within their state borders until Landon steps down and an 'reconciliation council' under thier chosen leader is put into place to restore order in the nation. In response, President Landon has given the governors thirty days to stand down or be collectively arrested - an order none of the leaders appear interested in obeying, making it all but certain that the United States will descend into civil war for the second time in less than a century."
+amcivwar.19.d:0 "알프 랜던 대통령은 많은 주지사들이 남부 대중주의자 휴이 롱이나 생디칼리즘 지도자 잭 리드에게 지지를 보내면서 연방 정부를 부정적으로 선언함에 따라 오늘 큰 타격을 입었습니다. 롱과 리드는 연방으로부터 탈퇴하는 것을 멈췄지만, 그들은 랜던이 사임하고 그들이 선택한 지도자의 산하에 있는 '재조정 협의회'가 국가의 질서를 회복하기 위해 시행될 때까지 연방 정부는 주 경계 내에 어떠한 권한도 가지고 있지 않다고 선언했습니다. 이에 대해 랜던 대통령은 주지사들에게 30일 동안 물러나거나 집단으로 체포되도록 했습니다 - 어떤 지도자도 복종에 관심을 보이지 않아 미국은 100년도 채 안 되어 두 번째로 내전에 돌입하게 될 것을 거의 확신하고 있습니다."
 amcivwar.19.a:0 "알겠다."
 
 amcivwar.20.t:0 "제2차 미국 내전"
@@ -366,7 +366,7 @@ amcivwar.36.b:0 "싸우지 말고 타협하자"
 amcivwar.36.c:0 "AFL의 편에 서자"
 
 amcivwar.37.t:0 "중앙위원회 지시 #656: 동계 자원 할당 계획([GetYear]년)"
-amcivwar.37.d:0 "혁명은 반드시 성공해야 하지만, 동시에 혁명은 인민들을 위한 것이여야 합니다. 혁명을 지원한다는 것과 인민을 지원한다는 것은 같은 맥락이기는 하지만, 둘 중 하나를 결정해야 한다는 것은 어려운 일입니다. 중앙 위원회는 현재의 공급상황이 심각한 수준이며, 인민과 군 둘 중 하나는 불가피하게도 이번 겨울 내내 공급 부족 상황에 시달려야 한다는 것을 깨달았습니다."
+amcivwar.37.d:0 "혁명은 반드시 성공해야 하지만, 동시에 혁명은 인민들을 위한 것이여야 합니다. 혁명을 지원한다는 것과 인민을 지원한다는 것은 같은 맥락이기는 하지만, 둘 중 하나를 결정해야 한다는 것은 어려운 일입니다. 중앙위원회는 현재의 공급상황이 심각한 수준이며, 인민과 군 둘 중 하나는 불가피하게도 이번 겨울 내내 공급 부족 상황에 시달려야 한다는 것을 깨달았습니다."
 amcivwar.37.a:0 "인민들을 우선순위에 두어라"
 amcivwar.37.b:0 "군을 우선순위에 두어라"
 
