--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -935,10 +935,10 @@ csa.89.d:0 "With the onset of a new society, a new set of ethics must take the p
 csa.89.a:0 "포스터가 물러선다"
 csa.89.b:0 "포스터가 이긴다"
 
-csa.90.t:0 "The USA Trilogy by John Dos Passos"
-csa.90.d:0 "Film montage, modernist writing, and the socialist spirit comes together in John Dos Passos's new book U.S.A. The story itself is an examination of twelve Americans that lived through the depression and revolution. Passos's writing combines snippets of newspapers, propaganda, and the conversations he recalls on the streets during the terrifying months before liberation. Such an unorthodox and creative writing is usually praised by the Americans Writers Congress, but they have remained silent. This is due to the book's depiction of extralegal killings that took place throughout America during the Civil War by our soldiers. To the nominal leader of the Writers Congress, Ernest Hemmingway, this book amounted to treason and sedition against the socialist government. However, his decision to censor the book and detain Dos Passos was overruled by the Congress."
-csa.90.a:0 "Calm Hemmingway down"
-csa.90.b:0 "Hemmingway is right"
+csa.90.t:0 "존 더스 패서스의 미국 삼부작"
+csa.90.d:0 "필름 몽타주, 모더니스트 작가, 그리고 사회주의 정신을 가진 존 더스 패서스 신작 <미국>이 출간되었다. 이 책은 혁명과 대공황 속에서 살아야 했던 12명의 미국인들의 이야기이며, 패소스의 글은 신문과 선전 그리고 몇달동안 해방 이전의 거리에서 들은 무시무시한 대화들을 결합시킨 것입니다. 보통의 경우는 이러한 독창적이고 창의적인 글쓰기는 미국 작가 회의에서 많은 호평을 얻지만, 지금은 그저 침묵을 지킬 뿐입니다. 왜냐하면 이것은 내전동안 CSA 군인에 의한 불법적인 살인들을 묘사했기 때문이었다. 작가회의의 명목상 지도자인 어나스트 허밍웨이는 이를 사회주의 정부에 대한 반역과 선동이라고 말했지만, 책을 검열하고 그를 가두기로 한 결정은 의회에서 기각되었습니다."
+csa.90.a:0 "허밍웨이를 진정시켜랴."
+csa.90.b:0 "허밍웨이 말이 옳다."
 
 csa.91.t:0 "Union Vacations"
 csa.91.d:0 "With the revolution one of the changes that has come is the transformation in terms of vacations. The workers of America rarely got to enjoy all the luxuries that were created and the progressives would say 'belonged to the people'. How many of the struggling masses got to enjoy picnics or visiting the national parks when they had to work as many hours just to survive and feed their children? No longer will this be the case. The various local unions across the country, regardless of which federation they belong to have begun to take over and manage various cultural centers as well as help sponsor vacations. This is supported by the government at both a local level and national level as a way to boost productivity and encourage comradeship."
