--- a/Kaiserreich Korean Translation/localisation/KR_North_German_Federation_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_North_German_Federation_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
 
 ### Parties ###
-NGF_totalist_party:0 "SV"
-NGF_totalist_party_long:0 "Sozialistische Volksfront"
-NGF_radical_socialist_party:0 "VMS"
-NGF_radical_socialist_party_long:0 "Vereinigung deutscher Matrosen und Seemänner"
-NGF_syndicalist_party:0 "NOI"
-NGF_syndicalist_party_long:0 "Norddeutsche Organisation der Internationale "
-NGF_social_democrat_party:0 "SPD"
-NGF_social_democrat_party_long:0 "Sozialdemokratische Partei Deutschlands"
-NGF_social_liberal_party:0 "FVP"
-NGF_social_liberal_party_long:0 "Fortschrittliche Volkspartei"
-NGF_market_liberal_party:0 "NLP"
-NGF_market_liberal_party_long:0 "Nationalliberale Partei"
-NGF_social_conservative_party:0 "HVB"
-NGF_social_conservative_party_long:0 "Hanseatischer Volksbund"
+NGF_totalist_party:0 "인민전선"
+NGF_totalist_party_long:0 "사회주의 인민전선"
+NGF_radical_socialist_party:0 "선원조합"
+NGF_radical_socialist_party_long:0 "독일 선원조합"
+NGF_syndicalist_party:0 "인터내셔널"
+NGF_syndicalist_party_long:0 "인터내셔널 북독일 지부"
+NGF_social_democrat_party:0 "사회민주당"
+NGF_social_democrat_party_long:0 "독일 사회민주당"
+NGF_social_liberal_party:0 "진보인민당"
+NGF_social_liberal_party_long:0 "진보인민당"
+NGF_market_liberal_party:0 "국가자유당"
+NGF_market_liberal_party_long:0 "국가자유당"
+NGF_social_conservative_party:0 "한자동맹"
+NGF_social_conservative_party_long:0 "한자 인민동맹"
 NGF_authoritarian_democrat_party:0 "BdL"
-NGF_authoritarian_democrat_party_long:0 "Bund der Landwirte"
-NGF_paternal_autocrat_party:0 "DHP"
-NGF_paternal_autocrat_party_long:0 "Deutsch-Hannoversche Partei"
-NGF_national_populist_party:0 "AV"
-NGF_national_populist_party_long:0 "Alldeutscher Verband"
+NGF_authoritarian_democrat_party_long:0 "농업자동맹"
+NGF_paternal_autocrat_party:0 "하노버당"
+NGF_paternal_autocrat_party_long:0 "독일-하노버당"
+NGF_national_populist_party:0 "전독일연맹"
+NGF_national_populist_party_long:0 "전독일연맹"
