--- a/Kaiserreich Korean Translation/localisation/KR_00_Map_States_Native_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_00_Map_States_Native_l_english.yml
@@ -61,7 +61,7 @@ l_english:
  endo_state_59:0 "하노버"
  endo_state_60:0 "튀링겐"
  endo_state_61:0 "메클렌부르크"
- endo_state_62:0 "보데포메른"
+ endo_state_62:0 "보어포메른"
  endo_state_63:0 "힌터포메른"
  endo_state_64:0 "브란덴부르크"
  endo_state_65:0 "작센"
@@ -221,7 +221,7 @@ l_english:
  endo_state_219:0 "모스크바"
  endo_state_220:0 "쿠르스크"
  endo_state_221:0 "하르키우"
- endo_state_222:0 "오룔"
+ endo_state_222:0 "오롈"
  endo_state_223:0 "툴라"
  endo_state_224:0 "브랸스크"
  endo_state_225:0 "수미"
@@ -568,7 +568,7 @@ l_english:
  endo_state_566:0 "이르쿠츠크"
  endo_state_567:0 "브라츠크"
  endo_state_568:0 "크라스노야르스크"
- endo_state_569:0 "케메로보"
+ endo_state_569:0 "세글로프스크"
  endo_state_570:0 "노보니콜라옙스크"
  endo_state_571:0 "옴스크"
  endo_state_572:0 "첼랴빈스크"
@@ -581,12 +581,12 @@ l_english:
  endo_state_579:0 "오브도르스크"
  endo_state_580:0 "토볼스크"
  endo_state_581:0 "세베르니우랄"
- endo_state_582:0 "벨로레츠크"
+ endo_state_582:0 "오르스크"
  endo_state_583:0 "쿠스타나이"
  endo_state_584:0 "카라쿰 사막"
  endo_state_585:0 "키질쿰"
  endo_state_586:0 "피슈페크"
- endo_state_587:0 "포트알렉산드로비치"
+ endo_state_587:0 "포트알렉산드롭스키"
  endo_state_588:0 "파블로다르"
  endo_state_589:0 "세미레치예"
  endo_state_590:0 "아크몰린스크"
@@ -634,7 +634,7 @@ l_english:
  endo_state_632:0 "웨이크섬"
  endo_state_633:0 "마셜인젠"
  endo_state_634:0 "솔로모넨"
- endo_state_635:0 "노이칼레도니엔"
+ endo_state_635:0 "노이엘자스"
  endo_state_636:0 "피지"
  endo_state_637:0 "캄차카"
  endo_state_638:0 "괌"
@@ -655,7 +655,7 @@ l_english:
  endo_state_653:0 "예카테린부르크"
  endo_state_654:0 "울랄라"
  endo_state_655:0 "북부 카라후토"
- endo_state_656:0 "쿠웨이트"
+ endo_state_656:0 "알하사"
  endo_state_657:0 "블라고베셴스크"
  endo_state_658:0 "아부자비"
  endo_state_659:0 "아딘"
@@ -674,7 +674,7 @@ l_english:
  endo_state_672:0 "동부 수마트라"
  endo_state_673:0 "셀레베스"
  endo_state_674:0 "호주 중부"
- endo_state_675:0 "알 하자라"
+ endo_state_675:0 "살와"
  endo_state_676:0 "무술"
  endo_state_677:0 "할레프"
  endo_state_678:0 "룹 알할리 사막"
@@ -723,7 +723,7 @@ l_english:
  endo_state_721:0 "포르투갈령 티모르"
  endo_state_722:0 "페첸가"
  endo_state_723:0 "남섬"
- endo_state_724:0 "코르카트그라"
+ endo_state_724:0 "팍타이"
  endo_state_725:0 "나우루"
  endo_state_726:0 "사모아"
  endo_state_727:0 "라인 제도"
@@ -818,7 +818,7 @@ l_english:
  endo_state_816:0 "다리"
  endo_state_817:0 "루시용"
  endo_state_818:0 "관타나모만"
- endo_state_819:0 "케르퀴크"
+ endo_state_819:0 "술라이마니야"
  endo_state_820:0 "산티아고 쿠바"
  endo_state_821:0 "파블로흐라드"
  endo_state_822:0 "란나"
@@ -843,7 +843,7 @@ l_english:
  endo_state_841:0 "피로트"
  endo_state_842:0 "테구시갈파"
  endo_state_843:0 "남서 뉴기니" 
- endo_state_844:0 "트론헤임"
+ endo_state_844:0 "이나리"
  endo_state_845:0 "카하마르카"
  endo_state_846:0 "말라야"
  endo_state_847:0 "베니"
@@ -989,12 +989,12 @@ endo_state_986:0 "북부 퀸즐랜드"
 endo_state_987:0 "킴벌리"
 endo_state_988:0 "필바라"
 endo_state_989:0 "테살로니키"
-endo_state_990:0 "자우프"
-endo_state_991:0 "알아사"
-endo_state_992:0 "카심"
+endo_state_990:0 "바키"
+endo_state_991:0 "하프르 알바틴"
+endo_state_992:0 "하이파"
 endo_state_993:0 "카타르"
-endo_state_994:0 "알아사쉬"
-endo_state_995:0 "알하르마"
+endo_state_994:0 "자우프"
+endo_state_995:0 "홈스"
 endo_state_996:0 "웨이하이웨이"
 endo_state_997:0 "나히체반"
 endo_state_998:0 "슈니크"
