--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -269,6 +269,9 @@ CAN_RAD_USA:0 "자유주의 캐나다"
 CAN_RAD_AST:0 "자유주의 캐나다"
 CAN_RAD_USA_NEG:0 "유명한 캐나다의 강점"
 CAN_RAD_AST_NEG:0 "유명한 캐나다의 강점"
+CAN_OCC_GREENLAND:0 "그린란드 점령"
+CAN_OCC_GREE:0 "그린란드 점령"
+CAN_NO_GREENLAND:0 "그린란드를 점령하지 않다"
 
 ### World Tension ###
 CAN_IRE_treaty_t:0 "캐나다-아일랜드 조약"
@@ -538,8 +541,13 @@ CAN_intervene_in_ACW_PSA:0 "내전에 개입하다"
 CAN_intervene_in_ACW_PSA_desc:0 "내전에서 우리의 동맹은 세력을 잃고 있습니다. 만약 우리가 곧바로 행동하지 않는다면, 우리는 국경에서 통일되고 적대적인 미국 국가를 마주하게 될 것입니다. 지금이 개입해야 될 때입니다 - 즉시 아메리카의 동맹과 접촉하여 분쟁에 대한 우리의 입장을 발표해야 됩니다."
 CAN_declare_war_on_CSA:0 "남부의 생디칼리스트들을 막아라"
 CAN_declare_war_on_CSA_desc:0 "[CSA.GetNameDef]이(가) 남부의 내전에서 승리하기 직전에 있습니다. 그들은 강하지만, 우리는 지금 그들과 직면해야만 합니다... 그렇지 않으면 힘을 회복하고 돌아온 그들과 마주하게 될 위험이 있습니다. 우리는 인터내셔널이 우리의 남부 국경에서 세계적인 강대국을 갖게 할 여유가 없습니다. 하나님께서 우리가 하는 일을 용서해 주시기를 바라면서, 우리는 남쪽을 침략할 때가 되었습니다."
-CAN_put_down_nee_rebellion:0 "양키 반란 처리"
-CAN_put_down_nee_rebellion_desc:0 "소위 '양키 반란'이 우리에게 큰 피해를 주고 있습니다. 우리는 상황이 통제 불능 상태가 되기 전에 군대를 보내고 그 상황을 처리하는 것 외에는 선택의 여지가 거의 없습니다."
+CAN_not_currently_fighting_yank:0 "현재 반란군들과 어디서도 싸우고 있지 않습니다\n"
+CAN_put_down_maine_rebellion:0 "메인 주 양키 반란 처리"
+CAN_put_down_maine_rebellion_desc:0 "소위 '양키 반란'이 우리에게 큰 피해를 주고 있습니다. 우리는 상황이 통제 불능 상태가 되기 전에 군대를 보내고 그 상황을 처리하는 것 외에는 선택의 여지가 거의 없습니다."
+CAN_put_down_newhamp_rebellion:0 "뉴햄프셔 양키 반란 처리"
+CAN_put_down_newhamp_rebellion_desc:0 "소위 '양키 반란'이 우리에게 큰 피해를 주고 있습니다. 우리는 상황이 통제 불능 상태가 되기 전에 군대를 보내고 그 상황을 처리하는 것 외에는 선택의 여지가 거의 없습니다."
+CAN_put_down_verm_rebellion:0 "버몬트 양키 반란 처리"
+CAN_put_down_verm_rebellion_desc:0 "소위 '양키 반란'이 우리에게 큰 피해를 주고 있습니다. 우리는 상황이 통제 불능 상태가 되기 전에 군대를 보내고 그 상황을 처리하는 것 외에는 선택의 여지가 거의 없습니다."
 CAN_nee_recruitment1:0 "뉴잉글랜드 신병 모집"
 CAN_nee_recruitment1_desc:0 "뉴잉글랜드가 확고히 통제되고 있는 가운데, 미국 시민들 사이에 모집 운동을 시작할 때가 되었습니다 - 우리를 지지하는 사람들이 충분히 있고, 군사적인 경험으로, 우리는 몇 달 안에 많은 지역 주민들을 모을 수 있습니다."
 CAN_nee_recruitment2:0 "뉴잉글랜드 신병 모집을 계속하다"
@@ -1601,4 +1609,3 @@ canada.877.a:0 "우리는 준비되었다."
 canada.878.t:0 "캐나다의 개입"
 canada.878.d:0 "캐나다는 더 이상 [CSA.GetNameDef]이(가) 내전에서 승리하는 것을 지켜보지 않을 것이라고 선언했고, 지금 모든 협상국 전 병력을 무장 분쟁에 투입하였습니다. 그들은 좋든 나쁘든 간에, 우리 편에서 내전에 참가했습니다."
 canada.878.a:0 "때가 왔다!"
-
