--- a/Kaiserreich Korean Translation/localisation/KR_Capitulations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Capitulations_l_english.yml
@@ -51,12 +51,12 @@ capt.12.d:0 "The German government has collapsed and fled to Africa, assuming co
 capt.12.a:0 "식민지를 요구하라"
 capt.12.b:0 "독일과 싸울만큼 싸웠다"
 
-capt.13.t:0 "The [NFA.GetAdjective] Threat"
+capt.13.t:0 "[NFA.GetAdjective]의 위협"
 capt.13.d:0 "[NFA.GetNameDefCap] has issued a threat - either we turn over the colonies which once belonged to them, or they will continue their war against us. Considering our current state of disarray, it might be wise to accept their demands. If not, we will be fighting them here in Africa."
 capt.13.a:0 "Give them what they want, if it will end this"
 capt.13.b:0 "We face them here in Africa, then"
 
-capt.14.t:0 "The Germans Return"
+capt.14.t:0 "독일이 돌아오다"
 capt.14.d:0 "With the end of our war, the Germans have finally returned from the new base in Tanganyika to assume control. While there is some lingering resentment here, most are simply relieved to see them."
 capt.14.a:0 "Off to Tanganyika we go!"
 
@@ -70,6 +70,30 @@ capt.23.d.war:0 "With the Germans having collapsed in Europe and fled to Africa,
 capt.23.a:0 "That's a relief...?"
 capt.23.b:0 "We've been abandoned?!"
 
-capt.29.t:0 "Resistance in Paris Collapses"
-capt.29.d:0 "The occupation of Paris has been solidified, with the various pockets of resistance having been finally been defeated. The French refusal to admit that we have been defeated once again has finally crumbled in the wake of its inevitability."
-capt.29.a:0 "And so the Weltkrieg repeats itself..."
+capt.40.t:0 "파리 함락"
+capt.40.d:0 "It appears we must once again face the ignomity of occupation by a foreign power, as Paris has fallen to enemy control. Resistance throughout France has begun, but how long can we maintain it? There are many both within our nation as well as without who claim we were not a legitimate government to begin with. So long as the people are on our side, however, we still have a chance!"
+capt.40.a:0 "We have not lost yet!"
+
+capt.41.t:0 "The French Capitulation"
+capt.41.d.ger:0 "With the Commune of France's defeat, we have been asked to turn over control of our controlled territories in France to the German Empire, to better organize the occupation of the region and force an eventual French submission."
+capt.41.d.nfa:0 "With the Commune of France's defeat, we have been asked to turn over control of our controlled territories in France to [NFA.GetNameDef], their proper owner. It will be up to them to oversee the occupation and deal with any lingering Communard resistance."
+capt.41.a:0 "Of course"
+capt.41.b:0 "No, we shall keep what we curently control"
+
+capt.42.t:0 "French Resistance Collapses"
+capt.42.d:0 "The occupation of Paris has been solidified, with the various pockets of resistance having been finally been defeated and the legitimacy of our exiled government having been reduced to tatters. The French refusal to admit that we have been defeated once again has finally crumbled in the wake of its inevitability."
+capt.42.a:0 "Alas"
+
+capt.43.t:0 "Germany Offers Occupied Territory"
+capt.43.d:0 "Perhaps in the interest of undermining the legitimacy of the Commundard exiles, [GER.GetNameDef] has made an offer to the [Root.GetAdjective] government: control over a small number of provinces in the south of France. They make no promises come the eventual peace conference following the eventual collapse of the Commundard resistance. For now, they are willing to simply turn over occupation to us."
+capt.43.a:0 "That is a good deal - we'll take it!"
+capt.43.b:0 "No, we won't deal with the Germans"
+
+capt.44.t:0 "The French Refuse"
+capt.44.d:0 "Despite the benefit it would offer them come the eventual peace conference for French territory, [NFA.GetNameDef] has refused our generous offer."
+capt.44.a:0 "So be it"
+
+capt.45.t:0 "The French Agree"
+capt.45.d:0 "Obviously delighted by our generosity, [NFA.GetNameDef] has agreed to our offer and has already moved [NFA.GetAdjective] troops into some of the southern territories."
+capt.45.a:0 "Excellent"
+
