--- a/Kaiserreich Korean Translation/localisation/KR_Central_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Central_America_l_english.yml
@@ -191,26 +191,9 @@ CEN_revolutionary_front:0 "Revolutionary Front"
 CEN_anti_revolutionary_alliance:0 "People's Vanguard"
 
 ## Trigger Tooltips ##
-CEN_313_socialist:0 "The owner of Guatemala must be Socialist."
-CEN_314_socialist:0 "The owner of El Salvador must be Socialist."
-CEN_317_socialist:0 "The owner of Nicaragua must be Socialist."
-CEN_316_socialist:0 "The owner of Costa Rica must be Socialist"
-CEN_312_socialist:0 "The owner of San Pedro Sula must be Socialist."
-CEN_842_socialist:0 "The owner of Honduras must be Socialist."
-
-CEN_313_democratic:0 "The owner of Guatemala must be Liberal aligned."
-CEN_314_democratic:0 "The owner of El Salvador must be Liberal aligned."
-CEN_317_democratic:0 "The owner of Nicaragua must be Liberal aligned."
-CEN_316_democratic:0 "The owner of Costa Rica must be Liberal aligned"
-CEN_312_democratic:0 "The owner of San Pedro Sula must be Liberal aligned."
-CEN_842_democratic:0 "The owner of Honduras must be Liberal aligned."
-
-CEN_313_military:0 "The controller of Guatemala must be Military aligned."
-CEN_314_military:0 "The controller of El Salvador must be Military aligned."
-CEN_317_military:0 "The controller of Nicaragua must be Military aligned."
-CEN_316_military:0 "The owner of Costa Rica must be Military aligned"
-CEN_312_military:0 "The owner of San Pedro Sula must be Military aligned."
-CEN_842_military:0 "The owner of Honduras must be Military aligned."
+CEN_socialist_aligned:0 "Owner must either be a subject of §Y[Root.GetNameDef]§! or an aligned, socialist Central American nation which isn't at war\n"
+CEN_democratic_aligned:0 "Owner must either be a subject of §Y[Root.GetNameDef]§! or an aligned, democratic Central American nation which isn't at war\n"
+CEN_military_aligned:0 "Owner must either be a subject of §Y[Root.GetNameDef]§! or an aligned, authoritarian Central American nation which isn't at war\n"
 
 ### Cosmetic Tags ###
 CEN_CON_totalist:0 "센트로아메리카"
