--- a/Kaiserreich Korean Translation/localisation/KR_Colombia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Colombia_l_english.yml
@@ -73,8 +73,10 @@ COL_bogotazo:0 "Political Violence"
 COL_bogotazo_desc:0 "Violence between Liberals, Conservatives, Syndicalists and Leopardos erupted in a swift yet brutal manner in Bogotá. Now our party has nearly absolute control of Colombian politics"
 COL_status_quo:0 "Status Quo upheld"
 COL_status_quo_desc:0 "Colombia has always been a good place for good people to live. Isn't that why we love our country? Let us cherish our prosperity, and think of the future instead of ill for our brothers"
-COL_arms_deathroad:0 "Military Imports from Canada"
-COL_arms_deathroad_desc:0 "We are importing large amounts of supplies from Canada and other Entente nations"
+COL_arms_deathroad:0 "Canadian Armaments Support"
+COL_arms_deathroad_desc:0 "We are importing large amounts of supplies from Canada and other Entente nations."
+COL_arms_deathroad_2:0 "Further Canadian Support"
+COL_arms_deathroad_2_desc:0 "We are importing large quantities of supplies from Canada and other Entente nations. Thanks to a cocnentrated political effort, support from Canada has only grown recently."
 COL_tradeagreements:0 "Favourable Trade Agreements"
 COL_tradeagreements_desc:0 "Taking advantage of our growth and stability, we have managed to leverage better trade deals with our neighbours and the Great Powers"
 COL_stable_dem:0 "A Stable Democracy"
@@ -100,8 +102,8 @@ COL_assuming_direct_control_desc:0 "All semblance of legality has been dropped f
 colombia_gran_alliance:0 "안데스 조약기구"
 COL_emergency:0 "비상사태"
 COL_leopardos:0 "Leopardo Government"
-COL_liberal:0 "Liberal Government"
-COL_conservative:0 "Conservador Government"
+COL_liberal:0 "자유 정부"
+COL_conservative:0 "보수 정부"
 COL_unir:0 "UNIR Coalition Government"
 COL_coffe_trade:0 "커피 무역"
 
